# lol-api-service-fast

./: Cargo.toml  Dockerfile
src/: main.rs
src/dao/: mod.rs
src/error/: mod.rs
src/routes/: league.rs  matches.rs  mod.rs  player.rs  team.rs  tournament.rs
src/svc/: league.rs  matches.rs  mod.rs  player.rs  team.rs  tournament.rs
src/util/: mod.rs  tournament_ext.rs
